# inr-3d-pointcloud

./: README.md  environment.yml  registration-pipeline.yml  shape-reconstruction.yml
data/: data_transformation.py  download_txt.py  make_pkl.py
inr-implicit-shape-reconstruction-mesh/src/impl_recon/: train.py
registration-pipeline/: pyproject.toml
registration-pipeline-latent/registration.egg-info/: PKG-INFO  requires.txt
registration-pipeline-latent/src/: config.yml  train.py
registration-pipeline-latent/src/model/: implicits.py
registration-pipeline-latent/src/registration.egg-info/: PKG-INFO
registration-pipeline-latent/src/utils/: DeformingThings4D.py  dataloader.py  lung250M.py
registration-pipeline/registration.egg-info/: SOURCES.txt
registration-pipeline/src/: config.yml  config_lung.yml  train.py
registration-pipeline/src/registration.egg-info/: SOURCES.txt  requires.txt
registration-pipeline/src/utils/: config.py  defaults.py  loss.py  lung250M.py
siren/: sdf_meshing.py  training.py  utils.py
siren/experiment_scripts/: train_sdf.py
